       the tests in case of detected discrepancies. Also add a few new tests
       using this new feature.
     * Add ChiSquared-CDF approximation functions, needed for histogram
       comparisons to yield approximate p-values without introducing a new
       dependency like scipy.
     * Fix flawed asserts preventing proper MiniMC usage in debug builds.
     * MiniMC sources can now actually alter the weights of initial particles,
       and will keep track of the summed weights generated.
     * Add utility function fmtUInt64AsNiceDbl for safely formatting integers
       like 1000000 as 1e6, 12000 as 12e3, or falling back to just a plain
       integer value when appropriate.
     * MiniMC simulations now keep track of how many neutrons (and weights) are
       respectively provided by the source and miss the geometry. This on one
       hand allows more robust estimation of fraction of intensity absorption,
       as well as makes it easier to illuminate complicated shapes uniformly,
       while ignoring the parts of the beam missing the geometry.
     * It is now possible to disable absorption during MiniMC simulations, by
       setting absorption=0 in the enginecfg strings.
     * More consistent and useful serialisation of MiniMC source and geometry
       objects.
     * ...

v4.2.12 2026-01-05
     * Support spglib release 2.7.0 which changed module names and error
       handling. For now, we still support older spglib releases (back to
       2.1.0).
     * Bump end-year in copyright statements to 2026.

v4.2.10 2025-10-20
     * Add doInfo, doScatter, and doAbsorption flags to the NCMATComposer.load
       method (github issue #280).
     * Add more dedicated unit tests for NCMATComposer.
     * Add missing include in NCrystal/internal/utils/NCHists.hh.
     * Expose internal Hist1D utility Python class in new (still internal)
       _hist.py module, for potential usage in unit testing.

v4.2.8 2025-07-25