@@ -51,6 +51,9 @@ v4.2.13 (work-in-progress)
        comparisons to yield approximate p-values without introducing a new
        dependency like scipy.
      * Fix flawed asserts preventing proper MiniMC usage in debug builds.
+     * Fix memory leak in the MiniMC BasketMgr in cases where the memory pool
+       reached capacity. This typically mostly happened when utilising more
+       threads than actually available in hardware.
      * MiniMC sources can now actually alter the weights of initial particles,
        and will keep track of the summed weights generated.
      * Add utility function fmtUInt64AsNiceDbl for safely formatting integers
